# expensebook

./: CMakeLists.txt  README.md
.github/workflows/: windows.yml
resources/: resources.qrc
resources/sql/: schema.sql
resources/styles/: dark.qss  light.qss
src/: main.cpp
src/controllers/: CategoryController.cpp  CategoryController.h  EmployeeController.cpp  EmployeeController.h  ExpenseController.cpp  ExpenseController.h  IncomeController.cpp  IncomeController.h  ReportController.cpp  ReportController.h
src/core/: AppSettings.cpp  AppSettings.h  Database.cpp  Database.h  MigrationManager.cpp  MigrationManager.h
src/models/: Models.h
src/repositories/: AttachmentRepository.cpp  AttachmentRepository.h  AuditLogRepository.cpp  AuditLogRepository.h  CategoryRepository.cpp  CategoryRepository.h  EmployeeRepository.cpp  EmployeeRepository.h  ExpenseRepository.cpp  ExpenseRepository.h  IncomeRepository.cpp  IncomeRepository.h  PaymentMethodRepository.cpp  PaymentMethodRepository.h  SubCategoryRepository.cpp  SubCategoryRepository.h
src/services/: AuditService.cpp  AuditService.h  BackupService.cpp  BackupService.h  ExportService.cpp  ExportService.h  ReportService.cpp  ReportService.h  UndoService.cpp  UndoService.h
src/ui/: AppContext.h  MainWindow.cpp  MainWindow.h
src/ui/dialogs/: CategoryDialog.cpp  CategoryDialog.h  EmployeeDialog.cpp  EmployeeDialog.h
src/ui/pages/: BackupPage.cpp  BackupPage.h  BatchEntryPage.cpp  BatchEntryPage.h  CategoriesPage.cpp  CategoriesPage.h  DashboardPage.cpp  DashboardPage.h  EmployeesPage.cpp  EmployeesPage.h  ExpensePage.cpp  ExpensePage.h  IncomePage.cpp  IncomePage.h  LedgerPage.cpp  LedgerPage.h  ReportsPage.cpp  ReportsPage.h  SettingsPage.cpp  SettingsPage.h  SubCategoriesPage.cpp  SubCategoriesPage.h
src/ui/widgets/: AttachmentListWidget.cpp  AttachmentListWidget.h  SimpleCharts.cpp  SimpleCharts.h
src/utils/: Money.cpp  Money.h  Theme.cpp  Theme.h
